--- a/assets/sass/1-tools/_vars.sass
+++ b/assets/sass/1-tools/_vars.sass
@@ -140,6 +140,9 @@ $font-semibold:                     600
 $font-bold:							700
 $font-black:						900
 
+// Padding
+$card-pad:                          12px
+
 // Primary font
 $body-font: 						$font-default
 
