--- a/assets/sass/3-component/_sidebar-list.sass
+++ b/assets/sass/3-component/_sidebar-list.sass
@@ -72,7 +72,7 @@ ul.simple-list
         float: left
         display: flex
         flex-direction: column
-        border-bottom: 1px solid $right-border
+        // border-bottom: 1px solid $right-border
         padding-bottom: 15px
         h2
             color: $black
@@ -82,7 +82,7 @@ ul.simple-list
     .right-content
         width: 100%
         float: left
-        border-bottom: 1px solid $right-border
+        // border-bottom: 1px solid $right-border
         padding: 20px 0
         canvas, svg, img
             width: 100%
@@ -268,7 +268,7 @@ ul.simple-list
         li
             padding-bottom: 15px
             margin-bottom: 15px
-            border-bottom: 1px solid $right-border
+            // border-bottom: 1px solid $right-border
             a
                 flex-direction: row-reverse
                 .list-left
