--- a/components/product-details.html
+++ b/components/product-details.html
@@ -129,83 +129,224 @@
 
         <!-- App Content -->
         <div class="center-content">
-            <!-- app top -->
-            <div class="container-top">
-                <div class="container-left">
-                    <img src="../assets/img/benefit.png" />
+            <div class="topbar">
+                <div class="topbar-left">
+                    <div class="avatar avatar-xs">
+                        <img src="../assets/img/avatar.jpg" />
+                    </div>
+                    <ul class="topbar-list">
+                        <li>Melvin Hollowoy</li>
+                        <li><i class="fa fa-trophy"></i> Apperentice </li>
+                    </ul>
                 </div>
-                <div class="container-right">
-                    <div class="accordion-head">WHAT’S HAPPENING TODAY!</div>
-                    <div class="accordion-container">
-                        <!-- accordion -->
-                        <div class="accordion-wrapper">
-                            <div class="accordion-label">
-                                <img src="../assets/img/avatar.jpg" />
-                                <div class="label-content">
-                                    <p>For agencies and companies</p>
-                                    <p><i class="fa fa-calendar" ></i> 04.06.2019</p>
-                                </div>
-                                <div class="accordion-toggle">
-                                    <span class="check">
-                                        <i class="fa fa-check-circle default"></i>
-                                    </span>
-                                    <i class="fa fa-caret-down"></i>
-                                </div>
+                <div class="topbar-right">
+                    <ul class="topbar-list">
+                        <li><i class="fa fa-binoculars"></i> Followers | 17 </li>
+                        <li><i class="fa fa-user"></i> Following | 17 </li>
+                        <li><i class="fa fa-eye"></i> Deals | 6 </li>
+                    </ul>
+                </div>
+                <div class="topbar-right">
+                    <ul class="topbar-list">
+                        <li><i class="fa fa-circle success"></i> <span>Online</span></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- app top -->
+            <div class="container-top mt-15">
+                <!-- product left -->
+                <div class="product-detail-left">
+                    <div class="slider-wrapper">
+
+                    </div>
+                    <div class="product-detail-info">
+                        
+                        <h3>How to start a video opening introduction</h3>
+                        <span class="sub-title">Carpenter: <span class="default">Melvin Holloway</span></span>
+                        <p>Outdoor photography is about capturing the feeling you have when you are actually out in nature. Learn how to make photos that reﬂect the beauty and mood of the landscape you see with your naked eye in Photoshop and Lightroom for Landscape.</p>
+                        
+                        <ul class="check-list">
+                            <li>Prosthetic Make-Up</li>
+                            <li>Bridal Make-Up</li>
+                            <li>Event Make-Up</li>
+                            <li>Studio Make-Up</li>
+                        </ul>
+
+                        <div class="product-info-row">
+                            <div class="product-info-column">
+                                <span>
+                                    Organization
+                                </span>
+                                <h5>Name of company or organiser</h5>
                             </div>
-                            <div class="accordion-body">
-                                <div class="accordion-body-top">
-                                    For agencies and companies, we're hosting workshops to make sure you get the best out of this Design System.make sure you get the best out of this Design System.make sure you get the best out of this Design System.
+                            <div class="product-info-column">
+                                <span>
+                                    Company UEN No.
+                                </span>
+                                <h5>Company registration No.</h5>
+                            </div>
+                        </div>
+
+                        <div class="product-info-row">
+                            <div class="product-info-column">
+                                <span>
+                                    Address
+                                </span>
+                                <h5>12 Ang Mo Kio<br/>
+                                    #01-30<br/>
+                                    Avenue 5<br/>
+                                    Singapore<br/>
+                                    S386712</h5>
+                            </div>
+                            <div class="product-info-column contact-info-cards">
+                                <div class="contact-info">
+                                    <span>
+                                        Email
+                                    </span>
+                                    <i class="fa fa-envelope"></i>
                                 </div>
-                                <div class="accordion-body-bottom">
-                                    <div class="icons-left">
-                                        <i class="fa fa-heart default"></i>
-                                        <i class="fa fa-mail-forward"></i>
-                                    </div>
-                                    <div class="button-right">
-                                        <button type="button" class="btn default-btn"><i class="fa fa-phone-square mr-5"></i> Chat</button>
-                                    </div>
+                                <div class="contact-info">
+                                    <span>
+                                        Contact No
+                                    </span>
+                                    <i class="fa fa-phone-square"></i>
+                                </div>
+                                <div class="contact-info">
+                                    <span>
+                                        Order Link
+                                    </span>
+                                    <i class="fa fa-shopping-cart"></i>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- accordion -->
-                        <div class="accordion-wrapper">
-                            <div class="accordion-label">
-                                <img src="../assets/img/avatar.jpg" />
-                                <div class="label-content">
-                                    <p>For agencies and companies, we're hosting workshops to make sure you get the best out of this Design System.</p>
-                                    <p><i class="fa fa-calendar" ></i> 04.06.2019</p>
-                                </div>
-                                <div class="accordion-toggle">
-                                    <span class="check">
-                                        <i class="fa fa-check-circle default"></i>
-                                    </span>
-                                    <i class="fa fa-caret-down"></i>
-                                </div>
+                        <div class="product-info-row">
+                            <img src="../assets/img/map.png" />
+                        </div>
+
+                        <div class="product-info-row">
+                            <div class="product-info-column">
+                                <span>
+                                    Date Posted : 27 September 2017
+                                </span>
                             </div>
-                            <div class="accordion-body">
-                                <div class="accordion-body-top">
-                                    For agencies and companies, we're hosting workshops to make sure you get the best out of this Design System.make sure you get the best out of this Design System.make sure you get the best out of this Design System.
-                                </div>
-                                <div class="accordion-body-bottom">
-                                    <div class="icons-left">
-                                        <i class="fa fa-heart default"></i>
-                                        <i class="fa fa-mail-forward"></i>
-                                    </div>
-                                    <div class="button-right">
-                                        <button type="button" class="btn default-btn"><i class="fa fa-phone-square mr-5"></i> Chat</button>
-                                    </div>
+                        </div>
+                        <hr/>
+                        <div class="product-info-row mb-20">
+                            <div class="product-info-column price-wrapper">
+                                <span class="price">
+                                    $300
+                                </span>
+                                <span class="price-sub">
+                                    Per hour
+                                </span>
+                            </div>
+                            <div class="product-info-column">
+                                <div class="product-option">
+                                    <span><i class="fa fa-thumbs-up default"></i> 456K</span>
+                                    <span><i class="fa fa-plus"></i></span>
+                                    <span><i class="fa fa-share"></i></span>
                                 </div>
                             </div>
                         </div>
-                        
+
+                    </div>
+                </div>
+
+                <!-- product right -->
+                <div class="product-detail-right">
+                    <div class="product-card">
+                        <div class="product-img">
+                            <img src="../assets/img/img-thumb.png" />
+                        </div>
+                        <div class="product-content">
+                            <h5>Magazine Images</h5>
+                            <span><span class="default">Kinfolk</span>  |  Updated: 20 Nov 2018</span>
+                        </div>
+                    </div>
+
+                    <div class="product-card">
+                        <div class="product-img">
+                            <img src="../assets/img/img-thumb.png" />
+                        </div>
+                        <div class="product-content">
+                            <h5>Magazine Images</h5>
+                            <span><span class="default">Kinfolk</span>  |  Updated: 20 Nov 2018</span>
+                        </div>
+                    </div>
+
+                    <div class="product-card">
+                        <div class="product-img">
+                            <img src="../assets/img/img-thumb.png" />
+                        </div>
+                        <div class="product-content">
+                            <h5>Magazine Images</h5>
+                            <span><span class="default">Kinfolk</span>  |  Updated: 20 Nov 2018</span>
+                        </div>
+                    </div>
+
+                    <div class="product-card">
+                        <div class="product-img">
+                            <img src="../assets/img/img-thumb.png" />
+                        </div>
+                        <div class="product-content">
+                            <h5>Magazine Images</h5>
+                            <span><span class="default">Kinfolk</span>  |  Updated: 20 Nov 2018</span>
+                        </div>
+                    </div>
+
+                    <div class="product-card">
+                        <div class="product-img">
+                            <img src="../assets/img/img-thumb.png" />
+                        </div>
+                        <div class="product-content">
+                            <h5>Magazine Images</h5>
+                            <span><span class="default">Kinfolk</span>  |  Updated: 20 Nov 2018</span>
+                        </div>
+                    </div>
+                    
+                    <div class="product-card">
+                        <div class="product-img">
+                            <img src="../assets/img/img-thumb.png" />
+                        </div>
+                        <div class="product-content">
+                            <h5>Magazine Images</h5>
+                            <span><span class="default">Kinfolk</span>  |  Updated: 20 Nov 2018</span>
+                        </div>
+                    </div>
+
+                    <div class="product-card">
+                        <div class="product-img">
+                            <img src="../assets/img/img-thumb.png" />
+                        </div>
+                        <div class="product-content">
+                            <h5>Magazine Images</h5>
+                            <span><span class="default">Kinfolk</span>  |  Updated: 20 Nov 2018</span>
+                        </div>
+                    </div>
+
+                    <div class="product-card">
+                        <div class="product-img">
+                            <img src="../assets/img/img-thumb.png" />
+                        </div>
+                        <div class="product-content">
+                            <h5>Magazine Images</h5>
+                            <span><span class="default">Kinfolk</span>  |  Updated: 20 Nov 2018</span>
+                        </div>
+                    </div>
+
+                    <div class="product-card">
+                        <div class="product-img">
+                            <img src="../assets/img/img-thumb.png" />
+                        </div>
+                        <div class="product-content">
+                            <h5>Magazine Images</h5>
+                            <span><span class="default">Kinfolk</span>  |  Updated: 20 Nov 2018</span>
+                        </div>
                     </div>
                 </div>
             </div>
-            <!-- app container -->
-            <div class="content-container">
-                
-            </div>
+
         </div>
 
         <!-- Right side bar -->
