--- a/components/home.html
+++ b/components/home.html
@@ -27,7 +27,7 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <a class="logo" href="#">
-                    <img src="assets/img/home-logo.png" />
+                    <img src="../assets/img/home-logo.png" />
                 </a>
                 <div class="row flex-center">
                     <div class="col-lg-6 col-md-6 col-sm-6">
@@ -61,7 +61,7 @@
     <!-- Banner  -->
     <div class="banner-section">
         <div class="banner">
-            <img src="assets/img/banner.png" />
+            <img src="../assets/img/banner.png" />
             <div class="banner-content">
                 <h1>Collabro is The Platform 
                     for Entrepeneur to Collaborate 
@@ -223,7 +223,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-4 col-md-4">
-                        <img src="assets/img/logo.png" />
+                        <img src="../assets/img/logo.png" />
                         <p>Collabro is a decentralised platform for entrepreneurs to collaborate, engage, find resources and do business. Built with AI-powered tripartite collaboration system technology to connect business owners and end-users. This platform will benefit those who are seeking resources to hire, buy, sell or offer services.</p>
                     </div>
                     <div class="col-lg-2 col-md-2 col-lg-offset-1 col-md-offset-1">
