--- a/components/product-details.html
+++ b/components/product-details.html
@@ -155,7 +155,7 @@
             <!-- app top -->
             <div class="container-top mt-15">
                 <!-- product left -->
-                <div class="product-detail-left">
+                <div class="content-detail-left">
                     <div class="slider-wrapper">
 
                     </div>
@@ -254,7 +254,7 @@
                 </div>
 
                 <!-- product right -->
-                <div class="product-detail-right">
+                <div class="content-detail-right">
                     <div class="product-card">
                         <div class="product-img">
                             <img src="../assets/img/img-thumb.png" />
