--- a/assets/sass/3-component/_slickslider.scss
+++ b/assets/sass/3-component/_slickslider.scss
@@ -52,6 +52,7 @@
         float: left;
         background: $white;
         padding: 0px;
+        margin-top: 10px;
         .slick-arrow{
             z-index: 999;
         }
