--- a/assets/sass/1-tools/_vars.sass
+++ b/assets/sass/1-tools/_vars.sass
@@ -33,6 +33,7 @@ $olive: 							#3D9970
 $lime:  							#01FF70
 $rad-red:							#FF3A5C
 $mid-red:                           #FF2626
+$safron:                            #FF6E4B
 
 // Colors
 $default: 							$blue
@@ -45,6 +46,10 @@ $login-bg:                          #4F95FF
 $dropdown-hover-bg:                 #00d7ff
 $info-bg:                           #FBFBFD
 $info-text:                         #7E7F81
+
+$facebook:                          #3b5998
+$twitter:                           #55acee
+$whatsapp:                          #43d854
 
 // Gray Scale
 $white:  							#fff
