--- a/assets/sass/4-pages/_products.scss
+++ b/assets/sass/4-pages/_products.scss
@@ -114,6 +114,9 @@
     color: $secondary-text;
     margin-left: 5px;
     margin-bottom: 8px;
+    width: 40px;
+    margin-bottom: 1px;
+    line-height: $font-s;
 }
 
 .contact-info-cards{
