--- a/assets/sass/2-basics/_helpers.sass
+++ b/assets/sass/2-basics/_helpers.sass
@@ -24,6 +24,14 @@ a
 .text-white
   color: $white !important
 
+.facebook
+  color: $facebook
+.twitter
+  color: $twitter
+.whatsapp
+  color: $whatsapp
+
+
 .primary-bg
   background: $primary
 .secondary-bg
