--- a/assets/sass/3-component/_card.scss
+++ b/assets/sass/3-component/_card.scss
@@ -75,7 +75,10 @@
             font-size: $font-s;
             color: $secondary-text;
             margin-left: 5px;
-            margin-bottom: -10px;
+            margin-bottom: 8px;
+            width: 40px;
+            margin-bottom: 1px;
+            line-height: $font-s;
         }
         &.price-border{
             border-top: 1px solid $border;
@@ -128,6 +131,46 @@
     &:hover{
         .hover-icon{
             @extend .flex-center;
+        }
+    }
+    &.share-card{
+        padding: 10px 25px;
+        display: flex;
+        align-items: center;
+        .card-left{
+            width: 50%;
+            float: left;
+            font-size: $font-m;
+            display: flex;
+            align-items: center;
+            h4{
+                color: $black;
+                margin-left: 8px;
+            }
+            i{
+                font-size: $font-xlx;
+            }
+        }
+        .card-right{
+            width: 50%;
+            float: left;
+            text-align: right;
+            color: $safron;
+            font-size: $font-m;
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            span{
+                width: 30px;
+                height: 30px;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                background: $safron;
+                color: $white;
+                @include border-radius(50%);
+                margin-right: 8px;
+            }
         }
     }
 }
@@ -342,12 +385,16 @@
             min-width: 25%;
             max-width: 50%;
             padding: 0 15px;
+            &.full-width{
+                max-width: 100%;
+            }
             p{
                 margin-bottom: 0px;
             }
             h5{
                 color: $black;
                 margin-top: 0px;
+                @include wordlines();
             }
             span{
                 font-size: $font-s;
