--- a/components/index.html
+++ b/components/index.html
@@ -408,6 +408,39 @@
         </div>
 
         <div class="row mt-20">
+            <div class="col-lg-6 col-md-6 col-lg-offset-3 col-md-offset-3">
+                <h3>Share</h3>
+                <div class="card share-card">
+                    <div class="card-left">
+                        <i class="fa fa-facebook-square facebook"></i>
+                        <h4>Facebook</h4>
+                    </div>
+                    <div class="card-right">
+                        <span>25</span> XP
+                    </div>
+                </div>
+                <div class="card share-card">
+                    <div class="card-left">
+                        <i class="fa fa-twitter-square twitter"></i>
+                        <h4>Twitter</h4>
+                    </div>
+                    <div class="card-right">
+                        <span>25</span> XP
+                    </div>
+                </div>
+                <div class="card share-card">
+                    <div class="card-left">
+                        <i class="fa fa-whatsapp whatsapp"></i>
+                        <h4>Whatsapp</h4>
+                    </div>
+                    <div class="card-right">
+                        <span>25</span> XP
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-20">
             <div class="col-lg-10 col-md-10 col-lg-offset-1 col-md-offset-2">
                 <h4>Alerts</h4>
                 <div class="alert alert-warning alert-dismissible show" role="alert">
